# mirage-xmpp

./: .dockerignore  .gitignore  .travis-ci.sh  .travis-opam.sh  .travis.yml  CNAME  LICENSE  Makefile  README.md  _config.yml  demo-stanzas.py  demo-stanzas.xml  dune  dune-project  index.html  index.md  makefile  mirage-xmpp.opam  ocamlformat.sh  project-deps.sh
_layouts/: home.html
coverage/: index.html
coverage/integration/: integration.ml.html
coverage/src/: actions.ml.html  connections.ml.html  events.ml.html  handler.ml.html  jid.ml.html  parser.ml.html  roster.ml.html  rosters.ml.html  stanza.ml.html  state.ml.html  stream.ml.html  utils.ml.html  xml.ml.html
demos/send-receive/: .merlin  build  build-and-run  config.ml  run  test  unikernel.ml
demos/sockets/: README.md  build-and-run  config.ml  run  test  unikernel.ml
demos/xml-parsing/: run  (+6 more)
demos/xml-parsing-pkg/: Makefile  xmlparser.opam
demos/xml-parsing-pkg/mirage/: build-unikernel  config.ml  dune  unikernel.ml
demos/xml-parsing-pkg/src/: dune  xmlparser.ml  xmlparser.mli
demos/xml-parsing-pkg/test/: dune  test.ml
docs/: index.html
integration/: dune  integration.ml
mirage/: build-unikernel  config.ml  dune  unikernel.ml
mirage-xmpp/: index.html
pages/: _config.yml  index.md
src/: actions.ml  actions.mli  connections.ml  connections.mli  dune  events.ml  events.mli  handler.ml  handler.mli  jid.ml  jid.mli  parser.ml  parser.mli  roster.ml  roster.mli  rosters.ml  rosters.mli  stanza.ml  stanza.mli  state.ml  state.mli  stream.ml  stream.mli  utils.ml  utils.mli  xml.ml  xml.mli
(+106 files in other folders)
