opam-version: "2.0"
name: "mirage-xmpp"
version: "dev"
synopsis: "XMPP implementation for Ocaml"
maintainer: "Andrew J <apj39@cam.ac.uk>"
authors: "Andrew J"
license: "MIT"
homepage: "https://github.com/jeffa5/mirage-xmpp"
bug-reports: "https://github.com/jeffa5/mirage-xmpp/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "lwt"
  "sexplib"
  "markup-lwt"
  "ppx_expect"
  "ppx_deriving"
  "lwt_ppx"
  "bisect_ppx"
  "astring"
  "asetmap"
  "uuidm"
  "base64" {>= "3.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "build" "@src/runtest"]
]
